--- a/自然公园1.html
+++ b/自然公园1.html
@@ -34,11 +34,9 @@
       width: 35rem; /* 设置宽度 */
     }
 
+    
     .img1 {
-        position: absolute; /* 设置绝对定位 */
-        top: 63rem; /* 距离父元素顶部的距离 */
-        left: 1rem; /* 距离父元素左侧的距离 */
-        width: 60%; /* 设置宽度 */
+        position: relative; /* 设置绝对定位 */
         width: 50rem;
         height: 40rem;
     }
