--- a/自然公园1.html
+++ b/自然公园1.html
@@ -29,14 +29,13 @@
 }
 .content1 {
       position: absolute; /* 设置绝对定位 */
-      top: 68rem; /* 距离父元素顶部的距离 */
       right: 3rem; /* 距离父元素左侧的距离 */
       width: 35rem; /* 设置宽度 */
     }
 
     
     .img1 {
-        position: relative; /* 设置绝对定位 */
+        position: relative; 
         width: 50rem;
         height: 40rem;
     }
@@ -76,6 +75,8 @@
     <img class="img1" src="images/野鸭湖1.png">
 </div>
 <script>
+    var viewportHeight = window.innerHeight;
+document.querySelector(".content1").style.top = (100+viewportHeight) + "px";
     function scrollToBottom() {
   var scrollHeight = document.body.scrollHeight;
   var currentScroll = window.scrollY;
